wp angular ionic

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!--Header-Area-->
     <header class="blue-bg relative fix" id="home">
-        <div class="section-bg overlay-bg dewo ripple"></div>
+        <div class="section-bg overlay-bg angle-bg ripple jquery-ripples"></div>
         <!--Mainmenu-->
         <nav class="navbar navbar-default mainmenu-area navbar-fixed-top" data-spy="affix" data-offset-top="60">
             <div class="container">
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-8">
                     <div class="space-100"></div>
-                    <h1>É sobre <br />promover seu negócio</h1>
+                    <h1>Criamos sites e aplicativos<br />desde 2005</h1>
                     <div class="space-10"></div>
                     <p>Fazer um aplicativo, site e sistema para gerenciar e promover seu negócio é a chave para seu sucesso. Com a digitalização de todas as áreas da economia estamos todos conectados, ignorar isso é deixar espaço para a concorrência ocupar e ganhar em produtividades e faturamente. Vamos conversar sobre oportunidades para digitalizar seu negócio?</p>
                     <div class="space-50"></div>
@@ -110,26 +110,26 @@
             <div class="row">
                 <div class="col-xs-12 col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="well well-hover text-center">
-                        <p class="md-icon"><span class="ti-paint-bucket"></span></p>
+                        <p class="md-icon"><span class="ti-wordpress"></span></p>
                         <div class="space-10"></div>
-                        <h5 class="text-uppercase">Fácil de usar</h5>
-                        <p>Site e aplicativos que são fáceis de usar economizam tempo e ajudam organizações e escalar para novos patamares.</p>
+                        <h5 class="text-uppercase">WordPress</h5>
+                        <p>WordPress provê uma camada de interação REST para facilitar o relacionamento das empresas com seus aplicativo</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="well well-hover text-center">
-                        <p class="md-icon"><span class="ti-cup"></span></p>
+                        <p class="md-icon"><span class="ti-layout-width-default"></span></p>
                         <div class="space-10"></div>
-                        <h5 class="text-uppercase">Design Incrível</h5>
-                        <p>No mundo digital não basta ser, tem que parecer. Reconhecemos rapidamente aplicações modernas pela sua aparência.</p>
+                        <h5 class="text-uppercase">Angular</h5>
+                        <p>Um framework completo para a criação de aplicações web modernas e fáceis de usar, numa camada separada do WordPress.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="well well-hover text-center">
-                        <p class="md-icon"><span class="ti-headphone-alt"></span></p>
+                        <p class="md-icon"><span class="ti-mobile"></span></p>
                         <div class="space-10"></div>
-                        <h5 class="text-uppercase">Customizável</h5>
-                        <p>As necessidades do seu negócio são únicas, por isso é preciso entender muito bem e atualizar a aplicação para exatamente o que você precisa.</p>
+                        <h5 class="text-uppercase">Ionic</h5>
+                        <p>Transforma suas aplicações em PWA e aplicativos nativos Android e iOS, uma base de código para web e mobile.</p>
                     </div>
                 </div>
             </div>
