termina texto e fotos minimas para arte

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="space-10"></div>
                     <p>Fazer um aplicativo, site e sistema para gerenciar e promover seu negócio é a chave para seu sucesso. Com a digitalização de todas as áreas da economia estamos todos conectados, ignorar isso é deixar espaço para a concorrência ocupar e ganhar em produtividades e faturamente. Vamos conversar sobre oportunidades para digitalizar seu negócio?</p>
                     <div class="space-50"></div>
-                    <a href="https://www.youtube.com/watch?v=iaj8ktgL3BY" class="btn btn-icon video-popup"><span class="ti-control-play"></span>Ver vídeo</a>
+                    <a href="https://www.youtube.com/watch?v=_MpF827Isg4" class="btn btn-icon video-popup"><span class="ti-control-play"></span>Ver vídeo</a>
                 </div>
                 <div class="hidden-xs hidden-sm col-md-4">
                     <div class="home_screen_slide">
@@ -208,7 +208,7 @@
             <div class="row wow fadeInUp">
                 <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
                     <h3 class="text-uppercase">Funcionalidades</h3>
-                    <p>Você decide as funcionalidades que precisa para sua aplicação e nós fazemos.</p>
+                    <p>Você decide: nós fazemos.</p>
                 </div>
             </div>
             <div class="space-60"></div>
@@ -218,8 +218,8 @@
                     <a href="#feature1" data-toggle="tab">
                         <div class="media single-feature">
                             <div class="media-body text-right">
-                                <h5>Design Criativo</h5>
-                                <p>Criação de telas exclusivas e originais para seu projeto</p>
+                                <h5>Projetos Robustos</h5>
+                                <p>Qualidade de código resulta em facilidade para adaptar o produto as necessidades de nossos clientes</p>
                             </div>
                             <div class="media-right">
                                 <div class="border-icon">
@@ -246,8 +246,8 @@
                     <a href="#feature3" data-toggle="tab">
                         <div class="media single-feature">
                             <div class="media-body text-right">
-                                <h5>Sistemas Inteligentes</h5>
-                                <p>A capacidade de um aplicativo antecipar as vontades e interações do usuário torna-o inteligente</p>
+                                <h5>Inteligente</h5>
+                                <p>A capacidade de um aplicativo antecipar e prever o usuário</p>
                             </div>
                             <div class="media-right">
                                 <div class="border-icon">
@@ -293,8 +293,8 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5>Alta Qualidade</h5>
-                                <p>Qualidade de retina é a percepção que telas mais avançadas causam nos usuários mais exigentes</p>
+                                <h5>Inovador</h5>
+                                <p>Qualidade de telas mais modernas para os usuários mais exigentes</p>
                             </div>
                         </div>
                     </a>
@@ -307,8 +307,8 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5>Alta Resolução</h5>
-                                <p>Trabalhamos com atenção máxima aos detalhes para a impressão de qualidade em todos os tamanhos de telas</p>
+                                <h5>PWA</h5>
+                                <p>É nativo e está na loja da Google e Apple, mas também pode ser acessado do navegador</p>
                             </div>
                         </div>
                     </a>
@@ -321,8 +321,8 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5>Fácil Manutenção</h5>
-                                <p>Qualidade de código significa qualidade de manutenção e facilidade para adaptar o produto as necessidades de seus clientes</p>
+                                <h5>Design Criativo</h5>
+                                <p>Criação de telas exclusivas e originais para seu projeto</p>
                             </div>
                         </div>
                     </a>
@@ -607,7 +607,7 @@
                         <hr>
                         <div class="space-30"></div>
                         <ul class="list-unstyled">
-                            <li><strong class="amount">R &#36; <span class="big">1000</span></strong>/mês</li>
+                            <li><strong class="amount">R &#36; <span class="big"> 1000</span></strong>/mês *</li>
                             <li>Criação de App/PWA</li>
                             <li>Site e aplicativo android</li>
                             <li>Funções sob medidas</li>
@@ -625,7 +625,7 @@
                         <hr>
                         <div class="space-30"></div>
                         <ul class="list-unstyled">
-                            <li><strong class="amount">R &#36; <span class="big">500</span></strong>/mês</li>
+                            <li><strong class="amount">R &#36; <span class="big">500</span></strong>/mês *</li>
                             <li>Aplicação interativa</li>
                             <li>Funções online</li>
                             <li>Aplicação multi-uso</li>
@@ -643,7 +643,7 @@
                         <hr>
                         <div class="space-30"></div>
                         <ul class="list-unstyled">
-                            <li><strong class="amount">R &#36; <span class="big">1000</span></strong>/suporte</li>
+                            <li><strong class="amount">R &#36; <span class="big">1000</span></strong>/mês *</li>
                             <li>Suporte para sua empresa</li>
                             <li>Seus usuários respeitados</li>
                             <li>Atendimento em como usar</li>
@@ -655,6 +655,7 @@
                         <a href="#" class="btn btn-link text-uppercase">Avaliar</a>
                     </div>
                 </div>
+                <sub class="text-white">* a partir de</sub>
             </div>
         </div>
         <div class="space-80"></div>
