--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="space-100"></div>
                     <h1>Criamos sites e aplicativos<br />desde 2005</h1>
                     <div class="space-10"></div>
-                    <p>Fazer um aplicativo, site e sistema para gerenciar e promover seu negócio é a chave para seu sucesso. Com a digitalização de todas as áreas da economia estamos todos conectados, ignorar isso é deixar espaço para a concorrência ocupar e ganhar em produtividades e faturamente. Vamos conversar sobre oportunidades para digitalizar seu negócio?</p>
+                    <p>Fazer um aplicativo, site e sistema para gerenciar e promover seu negócio é a chave para seu sucesso. Com a digitalização de todas as áreas da economia estamos todos conectados, ignorar isso é deixar espaço para a concorrência ocupar e ganhar em produtividades e faturamento. Vamos conversar sobre oportunidades para digitalizar seu negócio?</p>
                     <div class="space-50"></div>
                     <a href="https://www.youtube.com/watch?v=_MpF827Isg4" class="btn btn-icon video-popup"><span class="ti-control-play"></span>Ver vídeo</a>
                 </div>
@@ -110,25 +110,25 @@
             <div class="row">
                 <div class="col-xs-12 col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="well well-hover text-center">
-                        <p class="md-icon"><span class="ti-wordpress"></span></p>
-                        <div class="space-10"></div>
-                        <h5 class="text-uppercase">WordPress</h5>
+                        <p class="md-icon" style="font-size: 50px;"><span class="ti-wordpress"></span></p>
+                        <div class="space-2"></div>
+                        <h5 class="text-uppercase" style="font-size: 22px;">WordPress</h5>
                         <p>WordPress provê uma camada de interação REST para facilitar o relacionamento das empresas com seus aplicativo</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="well well-hover text-center">
-                        <p class="md-icon"><span class="ti-layout-width-default"></span></p>
-                        <div class="space-10"></div>
-                        <h5 class="text-uppercase">Angular</h5>
+                        <p class="md-icon" style="font-size: 50px;"><span class="ti-layout-width-default"></span></p>
+                        <div class="space-2"></div>
+                        <h5 class="text-uppercase" style="font-size: 22px;">Angular</h5>
                         <p>Um framework completo para a criação de aplicações web modernas e fáceis de usar, numa camada separada do WordPress.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="well well-hover text-center">
-                        <p class="md-icon"><span class="ti-mobile"></span></p>
-                        <div class="space-10"></div>
-                        <h5 class="text-uppercase">Ionic</h5>
+                        <p class="md-icon" style="font-size: 50px;"><span class="ti-mobile"></span></p>
+                        <div class="space-2"></div>
+                        <h5 class="text-uppercase" style="font-size: 22px;">Ionic</h5>
                         <p>Transforma suas aplicações em PWA e aplicativos nativos Android e iOS, uma base de código para web e mobile.</p>
                     </div>
                 </div>
@@ -202,9 +202,9 @@
     < !--Work-Section/-->
     <!--Feature-Section-->
     <section class="fix">
-        <div class="space-60"></div>
+        <!--div class="space-60"></div-->
         <div class="container" id="feature">
-            <div class="space-100"></div>
+            <!--div class="space-100"></div-->
             <div class="row wow fadeInUp">
                 <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
                     <h3 class="text-uppercase">Funcionalidades</h3>
