melhora home para campanha google ads

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <li><a href="#client">Clientes</a></li>
                         <li><a href="#price">Preços</a></li>
                         <!--li><a href="#blog">Blog</a></li-->
-                        <!--li><a href="#contact">Contato</a></li-->
+                        <li><a href="#contact">Contato</a></li>
                     </ul>
                 </div>
             </div>
@@ -861,20 +861,21 @@
         </div>
     </div>
     <!--instagram section/-->
-    <!--Map- ->
+    <!--Map-->
     <div id="contact"></div>
     <div id="maps"></div>
-    <!- - Map/- ->
-    < ! - - Footer-area - ->
+    <!-- Map -->
+    <!-- Footer-area -->
     <footer class="black-bg">
         <div class="container">
             <div class="row">
                 <div class="offset-top">
                     <div class="col-xs-12 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="well well-lg">
-                            <h3>Get in Touch</h3>
+                            <h3>Contato</h3>
                             <div class="space-20"></div>
-                            <form action="process.php" id="contact-form" method="post">
+                            <div role="main" id="f5sites-com-googleads-1-529c20a2ae9064885145"></div><script type="text/javascript" src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script><script type="text/javascript"> new RDStationForms('f5sites-com-googleads-1-529c20a2ae9064885145', 'null').createForm();</script>
+                            <!--form action="process.php" id="contact-form" method="post">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6">
                                         <div class="form-group">
@@ -906,14 +907,15 @@
                                         <button class="btn btn-link no-round text-uppercase" type="submit">Send message</button>
                                     </div>
                                 </div>
-                            </form>
+                            </form-->
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="well well-lg">
-                            <h3>Address</h3>
+                            <h3>Agenda sua visita</h3>
                             <div class="space-20"></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ab quia officia, minus obcaecati corporis! Tenetur tempore, inventore cum sapiente minima accusantium illo animi, doloribus rerum deleniti cumque, consequatur eaque in unde facilis consectetur, eius eligendi nostrum. Facilis, recusandae, eos!</p>
+                            <p>Estamos localizados em São Paulo, na rua Brigadeiro Luis Antônio, próximo a principal avenida da cidade, Paulista.</p>
+                            <p>Agende sua visita, temos um espaço para reunião, auditório, estacionamento gratuito com manobrista.</p>
                             <div class="space-25"></div>
                             <table class="table">
                                 <tbody>
@@ -921,14 +923,14 @@
                                         <td>
                                             <div class="border-icon sm"><span class="ti-headphone"></span></div>
                                         </td>
-                                        <td><a href="callto:+0044545989626">+0044 545 989 626</a></td>
+                                        <td><a href="callto:+0044545989626">Atendimento priritário por telefone para clientes</a></td>
                                     </tr>
                                     <tr>
                                         <td>
                                             <div class="border-icon sm"><span class="ti-email"></span></div>
                                         </td>
                                         <td>
-                                            <a href="mailto:marveltheme@gmail.com">marveltheme@gmail.com</a>
+                                            <a href="mailto:marveltheme@gmail.com">Envie o contato pelo formulário em breve retornamos por email</a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -936,7 +938,7 @@
                                             <div class="border-icon sm"><span class="ti-location-pin"></span></div>
                                         </td>
                                         <td>
-                                            <address>28 Green Tower, Street Name New York City, USA</address>
+                                            <address>Av. Brigadeiro Luis Antônio, Jardins, São Paulo</address>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -945,7 +947,7 @@
                     </div>
                 </div>
             </div>
-            <div class="space-80"></div>
+            <!--div class="space-80"></div>
             <div class="row text-white wow fadeInUp">
                 <div class="col-xs-12 col-md-6 col-md-offset-3">
                     <h3 class="text-uppercase text-center">SubscribE OUR NEWSLETTER</h3>
@@ -960,18 +962,19 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div-->
             <div class="space-80"></div>
             <div class="row text-white wow fadeIn">
                 <div class="col-xs-12 text-center">
                     <div class="social-menu">
-                        <a href="#"><span class="ti-facebook"></span></a>
-                        <a href="#"><span class="ti-twitter-alt"></span></a>
-                        <a href="#"><span class="ti-linkedin"></span></a>
-                        <a href="#"><span class="ti-pinterest-alt"></span></a>
+                        <a href="https://www.instagram.com/f5sites/"><span class="ti-instagram"></span></a>
+                        <a href="https://web.facebook.com/f5sites/"><span class="ti-facebook"></span></a>
+                        <!--a href="#"><span class="ti-twitter-alt"></span></a-->
+                        <a href="https://www.linkedin.com/company/627006/admin/"><span class="ti-linkedin"></span></a>
+                        <!--a href="#"><span class="ti-pinterest-alt"></span></a-->
                     </div>
                     <div class="space-20"></div>
-                    <p>@ 2017 <a href="https://themeforest.net/user/themectg">ThemeCTG</a> all right resurved. Designed by <a href="https://themeforest.net/user/quomodotheme">Quomodotheme</a></p>
+                    <p>@ 2023 <a href="https://www.f5sites.com">F5 Sites</a> todos os direitos reservados. Página por <a href="https://www.franciscomatelli.com.br">Francisco Matelli</a></p>
                 </div>
             </div>
             <div class="space-20"></div>
