--- a/vamoslonge.tv/index.html
+++ b/vamoslonge.tv/index.html
@@ -129,7 +129,7 @@
       </ul>
     </aside>
     <main class="content">
-      <iframe width="560″ height="315″ src="https://www.youtube.com/embed/videoseries?list=PLb-I2ru-lOasuoKVN0s3qDCB91YKrCFvm" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLb-I2ru-lOasuoKVN0s3qDCB91YKrCFvm" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
     <footer class="footer">&copy; Copyright Mr. Camel</footer>
   </div>
