transloco with route working localhost

--- a/index.html
+++ b/index.html
@@ -57,5 +57,5 @@
     <script src="./assets/js/wow.min.js"></script>
     <script src="./assets/js/plugins.js"></script>
     <!-- <script src="./assets/js/vendor/modernizr-2.8.3.min.js"></script> -->
-  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-QN5CY4Y2.js" type="module"></script></body>
+  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-RP6GCWR5.js" type="module"></script></body>
 </html>
